tests/errors/function_arg_type_mismatch.dash
# Test function argument type mismatch
pub add_nums(x: Int!, y: Int!): Int! { x + y }
pub result = add_nums(x: "not a number", y: 5)